--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"  name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Yew App</title>
     <link data-trunk rel="scss" href="style.scss"/>
+    <link data-trunk href="./tailwind.css" rel="css" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Material+Icons&display=block" rel="stylesheet">
   </head>
 </html>
