fonts and scrolling

--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8"  name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Yew App</title>
-    <link data-trunk rel="scss" href="style.scss"/>
+    <link data-trunk rel="scss" href="./web/style.scss"/>
     <link data-trunk href="./tailwind.css" rel="css" />
+    <link data-trunk href="./web/hack.css" rel="css" />
+    <link data-trunk href="./web/mononoki.css" rel="css" />
+    <link data-trunk href="./web/fonts" rel="copy-dir" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Material+Icons&display=block" rel="stylesheet">
   </head>
